updated main.js with game logic, copied html and css files to this directory

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Jon's Memory Game Deliverable</title>
+</head>
+
+<body>
+  <nav class="clearfix">
+    <a href="#instructionlink">Instructions</a>
+    <a href="#game-board">Game</a>
+  </nav>
+
+  <h1>Memory Game</h1>
+  <h2 id="instructionlink">Instructions.</h2>
+  <h3>This game will be so much fun, you won't even know what hit you.</h3>
+  <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+  <hr>
+
+  <div class="board" id="game-board"> 
+ 
+ <!--
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+  -->
   
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
+  </div>
+
+  </br>
+
+<button id="cardButton">Create Cards</button>
+
+
+<footer>
+  <span class="bottomline"><a href="mailto:jonathan.grunewald1@gmail.com">Email Jon Here</a> </span>
+  <span class="bottomline"> <p>Find him on twitter <a href="www.google.com">here</a> </p> </span>
   
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
+  <span class="bottomline"><p>Created with &#x2665 by <span class="name">GA</span></span>
+  </p>
+</footer>
 
-     </body>
-
-
+<script src="/Users/JonMac/fundamentals/wdi-fundamentals-memorygame/starter-code/main.js"></script>
+</body>
 </html>
+
+
